<resources>
    <string name="app_name">TICSeguro</string>
    <string name="logo_text">TICSeguro Logo. Un escudo y adentro de él hay dos manos sosteniendo un candado</string>
    <string name="text_button_createaccount">Registrarse</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_tips">Tips</string>
    <string name="title_mi_perfil">Mi Perfil</string>
    <string name="hint_nombre_usuario">Nombre de usuario</string>
    <string name="instruccion_registro">Para comenzar, ingresa un nombre de usuario:</string>
    <string name="title_activity_phishing">Phishing</string>
    <string name="title_activity_social_networks">Redes Sociales</string>
    <string name="title_activity_internet">Internet</string>
    <string name="title_activity_contrasenas">Contraseñas</string>
    <string name="title_activity_register">TICSeguro</string>
    <string name="title_activity_prueba_tus_conocimientos_phishing">¿Qué tanto aprendiste?</string>
    <string name="title_activity_aprende_mas_phishing">Más sobre Phishing</string>
    <string name="title_activity_aprende_mas_redes_sociales">Más sobre Redes Sociales</string>
    <string name="title_activity_aprende_mas_internet">Más sobre Internet</string>
    <string name="title_activity_aprende_mas_contrasenas">Más sobre Contraseñas</string>
    <string name="bienvenida">¡Bienvenido a TICSeguro!</string>
    <string name="instruccion_phishing">Para comenzar, mira el siguiente vídeo:</string>
    <string name="titulo_phishing">¡Bienvenido a la lección Phishing!</string>
    <string name="phishing_explanatory_paragraph">Como viste en el vídeo, no seguir buenas prácticas puede poner en riesgo tu información.</string>
    <string name="boton_aprende_mas_sobre_phishing">Aprende más sobre Phishing</string>
    <string name="test_your_phishing_knowledge">¡Prueba tus conocimientos!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="titulo_redes_sociales">¡Bienvenido a la lección sobre Redes Sociales!</string>
    <string name="parrafo_explanatorio_redes_sociales">Las redes sociales nos proveen muchas funcionalidades. Sin embargo, hay que tener cuidado con lo que publicamos en ellas.</string>
    <string name="instruccion_redes_sociales">¿Sabes qué significa usar responsablemente las redes sociales? Te invitamos a ver el siguiente vídeo:</string>
    <string name="contenido_tip">Contenido tip 1</string>
    <string name="categoria_tip">Categoría tip 1</string>
    <string name="nombre_tip">Tip 1</string>
    <string name="nombre_leccion">Phishing</string>
    <string name="boton_aprende_mas_sobre_redes_sociales">Aprende más sobre Redes Sociales</string>
    <string name="boton_prueba_tus_conocimientos_sobre_redes_sociales">¡Prueba tus conocimientos!</string>
    <string name="titulo_internet">¡Bienvenido a la lección sobre Internet!</string>
    <string name="instruccion_internet">En esta sección, aprenderás a navegar de manera más segura en Internet:</string>
    <string name="parrafo_explicacion_internet">A veces, no nos fijamos si aparece un candado verde en la parte superior de tu navegador. ¡Esto tiene que cambiar!</string>
    <string name="titulo_contrasenas">¡Bienvenido a la lección Contraseñas!</string>
    <string name="instruccion_contrasenas">¿Sabes cuáles son las principales recomendaciones para tener contraseñas seguras?</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="instruccion_avatar">Puedes cambiar el avatar dándole click encima.</string>
    <string name="texto_progreso">Este es tu progreso:</string>
    <string name="titulo_leccion_phishing">Lección 1 - Phishing</string>
    <string name="titulo_leccion_redes_sociales">Lección 2 - Redes Sociales</string>
    <string name="titulo_leccion_internet">Lección 3 - Internet</string>
    <string name="titulo_leccion_contrasenas">Lección 4 - Contraseñas</string>
    <string name="boton_aprende_mas_sobre_internet">Aprende más sobre Internet</string>
    <string name="boton_aprende_mas_sobre_contrasenas">Aprende más sobre contraseñas</string>
    <string name="pregunta_aprende_mas_phishing">¿Te gustaría aprender más sobre Phishing?</string>
    <string name="instruccion_aprende_mas_phishing">Te recomendamos visitar las siguientes páginas web para aprender más sobre Phishing. Estas páginas fueron desarrolladas por empresas reconocidas. Ten en cuenta que éste material no fue creado por nosotros:</string>
    <string name="pagina_web_recomendada_phishing_1"><a href="">1. [Vídeo] Phishing: Qué es Phishing y cómo evitar ser víctima. Por Dell Soporte.</a></string>
    <string name="link_phishing_1">https://www.youtube.com/watch?v=UtGZqltfBEs</string>
    <string name="pagina_web_recomendada_phishing_2"><a href="">2. [Vídeo] Phishing-Uso Responsable de tu Información. Por Grupo Bancolombia.</a></string>
    <string name="link_phishing_2">https://www.youtube.com/watch?v=KOcJUcZ39AE</string>
    <string name="pregunta_aprende_mas_redes_sociales">¿Te gustaría aprender más sobre un uso adecuado de Redes Sociales?</string>
    <string name="instruccion_aprende_mas_redes_sociales">Te recomendamos visitar las siguientes páginas web para aprender cómo proteger tu información en redes sociales. Estas páginas fueron desarrolladas por empresas reconocidas. Ten en cuenta que éste material no fue creado por nosotros:</string>
    <string name="pagina_web_recomendada_redes_sociales_1"><a href="https://www.youtube.com/watch?v=WMEk-bua9vA">1. [Vídeo] ¿Hacemos buen uso de las redes sociales? Por OSIseguridad.</a></string>
    <string name="link_redes_sociales_1">https://www.youtube.com/watch?v=WMEk-bua9vA</string>
    <string name="pagina_web_recomendada_redes_sociales_2"><a href="https://www.osi.es/sites/default/files/images/concienciacion/c4_pdf_rp_muevete_seguro_rrss.pdf">2. [PDF] Muévete seguro por las redes sociales. Por OSIseguridad.</a></string>
    <string name="link_redes_sociales_2">https://www.osi.es/sites/default/files/images/concienciacion/c4_pdf_rp_muevete_seguro_rrss.pdf</string>
    <string name="pagina_web_recomendada_redes_sociales_3"><a href="https://www.youtube.com/watch?v=xItJJCR7DBw&amp;feature=youtu.be">3. [Vídeo] Privacidad y seguridad en Facebook. Por OSIseguridad.</a></string>
    <string name="link_redes_sociales_3">https://www.youtube.com/watch?v=xItJJCR7DBw&amp;feature=youtu.be</string>
    <string name="pagina_web_recomendada_redes_sociales_4"><a href="https://www.youtube.com/watch?v=NKHGRIfgamU&amp;feature=youtu.be">4. [Vídeo] Privacidad y seguridad en Twitter. Por OSIseguridad.</a></string>
    <string name="link_redes_sociales_4">https://www.youtube.com/watch?v=NKHGRIfgamU&amp;feature=youtu.be</string>
    <string name="pagina_web_recomendada_redes_sociales_5"><a href="https://www.youtube.com/watch?v=cIAD2vv72TM&amp;feature=youtu.be">5. [Vídeo] Privacidad y seguridad en Instagram. Por OSIseguridad.</a></string>
    <string name="link_redes_sociales_5">https://www.youtube.com/watch?v=cIAD2vv72TM&amp;feature=youtu.be</string>
    <string name="pagina_web_recomendada_redes_sociales_6"><a href="https://www.youtube.com/watch?v=fgnJokNOqSw&amp;feature=youtu.be">6. [Vídeo] Privacidad y seguridad en YouTube. Por OSIseguridad.</a></string>
    <string name="link_redes_sociales_6">https://www.youtube.com/watch?v=fgnJokNOqSw&amp;feature=youtu.be</string>
    <string name="pagina_web_recomendada_redes_sociales_7"><a href="https://www.youtube.com/watch?v=RpwRtQN9iv0&amp;feature=youtu.be">7. [Vídeo] Privacidad y seguridad en Whatsapp. Por OSIseguridad.</a></string>
    <string name="link_redes_sociales_7">https://www.youtube.com/watch?v=RpwRtQN9iv0&amp;feature=youtu.be</string>
    <string name="pagina_web_recomendada_redes_sociales_8"><a href="https://www.youtube.com/watch?v=H8D7BDnDL9E&amp;feature=youtu.be">8. [Vídeo] Privacidad y seguridad en Snapchat. Por OSIseguridad.</a></string>
    <string name="link_redes_sociales_8">https://www.youtube.com/watch?v=H8D7BDnDL9E&amp;feature=youtu.be</string>
    <string name="pregunta_aprende_mas_internet">¿Estás listo para aprender más sobre cómo navegar seguro en Internet?</string>
    <string name="instruccion_aprende_mas_internet">Te recomendamos visitar las siguientes páginas web. Estas páginas fueron desarrolladas por empresas reconocidas. Ten en cuenta que éste material no fue creado por nosotros:</string>
    <string name="pagina_web_recomendada_internet_1"><a href="https://www.youtube.com/watch?v=Feea-oDtQiQ">1. [Vídeo] Precauciones al conectarse a una red inalámbrica WiFi pública. Por Dell Soporte.</a></string>
    <string name="link_internet_1">https://www.youtube.com/watch?v=Feea-oDtQiQ</string>
    <string name="pregunta_aprende_mas_contrasenas">¿Quieres seguir aprendiendo sobre cómo fortalecer tus contraseñas?</string>
    <string name="instruccion_aprende_mas_contrasenas">Te recomendamos visitar las siguientes páginas web. Estas páginas fueron desarrolladas por empresas reconocidas. Ten en cuenta que éste material no fue creado por nosotros:</string>
    <string name="pagina_web_recomendada_contrasenas_1"><a href="https://www.youtube.com/watch?v=Ee_FJ1mNwqM">1. [Vídeo] ¿Cuánto tardarían en averiguar mis contraseñas? Por OSIseguridad.</a></string>
    <string name="link_contrasenas_1">https://www.youtube.com/watch?v=Ee_FJ1mNwqM</string>
    <string name="pagina_web_recomendada_contrasenas_2"><a href="https://www.youtube.com/watch?v=w3Sh4ooBc6s">2. [Vídeo] Cómo Crear una Contraseña Segura y Difícil. Por Dell Soporte.</a></string>
    <string name="link_contrasenas_2">https://www.youtube.com/watch?v=w3Sh4ooBc6s</string>
    <string name="titulo_inicio">Lecciones</string>
    <string name="titulo_tips">Tips</string>
    <string name="titulo_ayudas">Ayudas</string>
    <string name="instruccion_fragment_tips">Protege tu información siguiendo estos tips:</string>
    <string name="titulo_respuesta">Explicación</string>
    <string name="title_activity_pregunta1_phishing">¿Qué tanto aprendiste?</string>
    <string name="title_activity_pregunta2_phishing">¿Qué tanto aprendiste?</string>
    <string name="title_activity_pregunta3_phishing">¿Qué tanto aprendiste?</string>
    <string name="title_activity_pregunta1_redes_sociales">¿Qué tanto aprendiste?</string>
    <string name="title_activity_pregunta2_redes_sociales">¿Qué tanto aprendiste?</string>
    <string name="title_activity_pregunta3_redes_sociales">¿Qué tanto aprendiste?</string>
    <string name="boton_pregunta_continuar">Siguiente pregunta</string>
    <string name="phishing_pregunta_1">Pregunta 1 - ¿Cuál de las siguientes afirmaciones es una recomendación para no ser víctima de Phishing?</string>
    <string name="phishing_pregunta_1_opcion_1">No revisar el emisor del correo</string>
    <string name="phishing_pregunta_1_opcion_2">Darle click a los URL que tenga un correo</string>
    <string name="phishing_pregunta_1_opcion_3">Desconfiar de los documentos adjuntos</string>
    <string name="phishing_pregunta_1_opcion_4">Confiar en correos que piden actuar de inmediato</string>
    <string name="instruccion_mostrar_respuesta">Para ver la respuesta, agita tu celular.</string>
    <string name="phishing_pregunta_1_respuesta">Los documentos adjuntos de un correo pueden contener software malicioso.</string>
    <string name="redes_sociales_pregunta_1_opcion_2">Compartir tu contraseña con otra persona</string>
    <string name="redes_sociales_pregunta_2">Pregunta 2 - Redes sociales como Facebook y Twitter no cuentan con ajustes que permiten a los usuarios asegurar su cuenta.</string>
    <string name="redes_sociales_pregunta_2_opcion_1">Verdadero</string>
    <string name="redes_sociales_pregunta_2_respuesta">Las redes sociales más populares ofrecen ajustes que permiten a sus usuarios controlar quién puede ver la información que publican entre otros.</string>
</resources>