<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.AprendeMasRedesSocialesActivity"
    tools:showIn="@layout/activity_aprende_mas_redes_sociales">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pregunta_aprende_mas_redes_sociales"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/instruccion_aprende_mas_redes_sociales"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/link_redes_sociales_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pagina_web_recomendada_redes_sociales_1"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/link_redes_sociales_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pagina_web_recomendada_redes_sociales_2"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/link_redes_sociales_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pagina_web_recomendada_redes_sociales_3"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/link_redes_sociales_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pagina_web_recomendada_redes_sociales_4"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/link_redes_sociales_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pagina_web_recomendada_redes_sociales_5"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/link_redes_sociales_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pagina_web_recomendada_redes_sociales_6"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/link_redes_sociales_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pagina_web_recomendada_redes_sociales_7"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/link_redes_sociales_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/pagina_web_recomendada_redes_sociales_8"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

    </LinearLayout>

</ScrollView>