<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/internet_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.InternetActivity"
    tools:showIn="@layout/activity_internet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/titulo_internet"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/instruccion_internet"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/video_view_internet"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/parrafo_explicacion_internet"
            android:textAlignment="center"
            android:textColor="@color/editTextColorBlack"
            android:textSize="25sp" />

        <Button
            android:id="@+id/aprende_mas_sobre_phishing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="aprendeMasSobreInternet"
            android:text="@string/boton_aprende_mas_sobre_redes_sociales"
            android:theme="@style/RaisedButtonDark" />

        <Button
            android:id="@+id/prueba_tus_conocimientos_phishing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="pruebaTusConocimientosSobreInternet"
            android:text="@string/boton_prueba_tus_conocimientos_sobre_redes_sociales"
            android:theme="@style/RaisedButtonDark" />

    </LinearLayout>

</ScrollView>